# pyproject-starter

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  mypy.ini  poetry.toml  pyproject.toml  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  prj.hello.yml  run.yml
src/hello/: main.py
src/pdf_parse/: __init__.py  add_pdf_annotiation.py  add_pdf_annotiations.py  extract_pdf_images.py  extract_text_location.py  merge_pdf.py  multi_pdf_parse.py  multi_pdf_to_multi_layer_pdf.py  new_pdf_from_ocr.py  single_pdf_parse.py
src/spider/baike/: middlewares.py
src/spiders/baike/: items.py  pipelines.py  settings.py
src/spiders/baike/spiders/: __init__.py
src/utils/: __init__.py  exception.py  logger.py  util.py  ziputil.py
tests/: __init__.py  conftest.py  test_hello.py
tests/hello_test/: hello_test.py
tests/pdf_parse_test/: merge_pdf_test.py
tests/test_pdf_parse/: __init__.py  test_add_pdf_annotiation.py  test_extract_pdf_images.py  test_extract_text_location.py  test_merge_pdf.py  test_multi_pdf_to_multi_layer_pdf.py  test_new_pdf_from_ocr.py  test_single_pdf_parse.py
