[tool.poetry]
name = "multi-layer-pdf"
version = "0.1.0"
description = "This is a simple tool to merge multiple PDF files into a single PDF file."
authors = ["Leon <silenceace@gmail.com>"]
readme = "README.md"
packages = [{include = "multi_layer_pdf"}]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.11.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
mypy = "^0.981"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
use_parentheses = true
src_paths = ["multi_layer_pdf", "tests"]
skip_glob = []
filter_files = true
known_first_party = "multi_layer_pdf"