[tool.poetry]
name = "pyproject-starter"
version = "0.1.0"
description = "a template for a python project. It uses poetry for dependency management."
authors = ["Leon <silenceace@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pdf_parse", from = "src"}, {include = "hello", from = "src"}]

[tool.poetry.scripts]
hello = "hello.main:hello"

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.11.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
mypy = "^0.981"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
use_parentheses = true
src_paths = ["src", "tests"]
skip_glob = []
filter_files = true
known_first_party = "pdf_parse"